# 26_wuren_Zhenhua-Ye

./: .gitignore  CMakeLists.txt  README.md
Homework1/CMake_HW/: README.md
Homework1/CMake_HW/common/kalman/: CMakeLists.txt
Homework1/CMake_HW/common/math/: CMakeLists.txt
Homework1/CMake_HW/modules/A2/: CMakeLists.txt
Homework1/linux_practice_HW/: README.md  assignment.sh
Homework1/linux_practice_HW/linux_practice/docs/: daily_report.txt
Homework2/: README.md
Homework2/作业1/: homework1_genetic_algorithm.ipynb
Homework2/作业2/: homework2_1_linear_regression.ipynb
Homework2/作业2/.ipynb_checkpoints/: homework2_2_ridge_regression-checkpoint.ipynb
Homework2/作业3/: homework3_svm_iris.ipynb.ipynb
Homework2/作业4/.ipynb_checkpoints/: Kmeans_Exp-checkpoint.ipynb
Homework3/: README.md  my_test.py  net copy.py  test.py  train.py
Homework3/basic_homework_2/: deep_learning_notes.md  paper_summary.md
Homework4/: .gitignore
Homework4/ros2_homework_advanced/: README.md  run_visualization.sh
Homework4/ros2_homework_advanced/src/: publish_marker_tamplate.md
Homework4/ros2_homework_advanced/src/cone_map_visualizer/: package.xml  setup.cfg  setup.py
Homework4/ros2_homework_advanced/src/cone_map_visualizer/cone_map_visualizer/: cone_map_visualizer_node.py
Homework4/ros2_homework_advanced/src/cone_map_visualizer/config/: cone_map.rviz
Homework4/ros2_homework_advanced/src/cone_map_visualizer/launch/: visualize_cone_map.launch.py
Homework4/ros2_homework_advanced/src/fsd_common_msgs/: CMakeLists.txt  package.xml
Homework4/turtle_figure8/: README.md
Homework4/turtle_figure8/src/turtle_figure8/: package.xml  setup.cfg  setup.py
Homework4/turtle_figure8/src/turtle_figure8/config/: params.yaml
Homework4/turtle_figure8/src/turtle_figure8/launch/: figure8_launch.py
Homework4/turtle_figure8/src/turtle_figure8/turtle_figure8/: figure8_node.py
Homework5/: README.md
Homework5/作业1/: bicycle_models_problem.m  lane_follower.m
Homework5/作业2/: CMakeLists.txt  q1_gradient_descent.cpp  q3_osqp_solve.cpp
Homework6/gazebo+大作业/percep_node+track/: README.md
Homework6/gazebo+大作业/percep_node+track/tracks/models/blue_cone/: model.sdf
Homework6/gazebo+大作业/percep_node+track/tracks/models/yellow_cone/: model.sdf
Homework6/gazebo+大作业/test/test/: definition.md  display_tf.py  run_code.md  vehicle_tf.urdf
Homework6/ros2_ws_Gazebo/: README.md  run_sim.sh
Homework6/ros2_ws_Gazebo/config/: ros_gz_bridge.yaml
Homework6/ros2_ws_Gazebo/src/car_sim/: bridge.yaml  package.xml  setup.cfg  setup.py
Homework6/ros2_ws_Gazebo/src/car_sim/car_sim/: gazebo_bridge.py  spawn_car.py
Homework6/ros2_ws_Gazebo/src/car_sim/launch/: sim_bringup.launch.py  sim_bringup_harmonic.launch.py
Homework6/ros2_ws_Gazebo/src/car_sim/urdf/: car_sim.sdf  car_sim.urdf  car_sim.xacro
Homework6/ros2_ws_Gazebo/src/car_sim/worlds/: map.world  shixi_track.sdf
Homework6/ros2_ws_Gazebo/src/car_sim/龚鑫哲仿真学习记录/: readme.md  运行操作笔记.md
Homework6/ros2_ws_Gazebo/src/cone_mapping/: package.xml  setup.py  何嘉喜规划+控制.md
Homework6/ros2_ws_Gazebo/src/cone_mapping/cone_mapping/: cone_detector.py  landmark_localizer.py
Homework6/ros2_ws_Gazebo/src/cone_mapping/config/: cone_map.yaml
Homework6/ros2_ws_Gazebo/src/cone_mapping/launch/: cone_mapping.launch.py
Homework6/ros2_ws_Gazebo/src/planning_control/: README.md  package.xml  setup.cfg  setup.py  test_path_control.py  作业要求对照.md  笔记.md
Homework6/ros2_ws_Gazebo/src/planning_control/launch/: planning_control_launch.launch.py
Homework6/ros2_ws_Gazebo/src/planning_control/planning_control/: controller_node.py  path_planner_node.py
Homework6/ros2_ws_Gazebo/src/sensor_fusion/: package.xml  setup.py  叶镇华学习记录 传感器融合节点.md
Homework6/ros2_ws_Gazebo/src/sensor_fusion/launch/: fusion_launch.launch.py
Homework6/ros2_ws_Gazebo/src/sensor_fusion/sensor_fusion/: ekf_localization.py  gps_converter.py  sensor_fusion_node.py
Homework6/ros2_ws_Gazebo/src/tracks/: shixi_track.sdf
Sys_Model_Engine/: ISO_15_ABB_1028_14,SI,NC,14_68.CATPart  ISO_3912_3x5x13-N.CATPart  ISO_4762_M4x12_12N.CATPart  ISO_4762_M4x20_20N.CATPart  Part_10_Bell_Valve.CATPart  Part_17_Piston_Cylinder_Sleeve.CATPart  Part_2_Cylinder_Head.CATPart  Part_8_Clamping_Disk.CATPart  Sys_Model_Engine.CATProduct
modules/A1/: CMakeLists.txt
modules/M1/: CMakeLists.txt
modules/M2/: CMakeLists.txt
叶镇华CATIA作业/: README.md
叶镇华CATIA作业/Sys_Model_Engine/: ISO_15_ABB_2015_12,SI,NC,12_68.CATPart  ISO_4161_M12_N.CATPart  Part_11_Fuel_Feed_Pipe.CATPart  Part_12_Carburetor.CATPart  Part_13__Throttle_Value_Vracket.CATPart  Part_14_Throttle_Bracket_Fastening_Screw.CATPart  Part_15_Connection_Rod.CATPart  Part_16_Piston.CATPart  Part_18_Upper_End-shield.CATPart  Part_20_Connecting_Rod_Pin.CATPart  Part_21_Aeromodel_Engine.CATPart  Part_3_Engine_Spindle.CATPart  Part_5_Carburetor_Side_Outlet_Plug_Pin.CATPart  Part_7_Drive_Plate.CATPart  Sys_Model_Engine.CATProduct
