<?xml version="1.0"?>
<package format="3">
  <name>cone_mapping</name>
  <version>0.1.0</version>
  <description>锥桶检测 + 地标匹配定位</description>
  <maintainer email="user@test.com">user</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>python3-yaml</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
